--- a/algorithme_genetique_ex2.ipynb
+++ b/algorithme_genetique_ex2.ipynb
@@ -121,6 +121,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[0,0],\n",
+    "              [0,1],\n",
+    "              [1,0],\n",
+    "              [1,1]])\n",
+    "scores = np.array([[0.5],\n",
+    "                   [1.2],\n",
+    "                   [0.1],\n",
+    "                   [5.2]])\n",
+    "afficher_population_et_scores(a,scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "individus_selectiones = selection(a,scores)\n",
+    "print(individus_selectiones)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -130,10 +164,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "d0d192e5f9f8babaf8eeb23985231c86a4cb6cfd9456ebb433e81bf8d2fafc88"
+   "hash": "6b304e056ab2e04bd32ce387bd5718e3059915cbf5f61cc3ea41defd4728d2e6"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('fidle')",
+   "display_name": "Python 3.8.2 64-bit (system)",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   },
   "orig_nbformat": 4
  },
