add melange_parents & croisement functions

--- a/algorithme_genetique_ex2.ipynb
+++ b/algorithme_genetique_ex2.ipynb
@@ -155,6 +155,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test melange_parents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_melange = melange_parents(a)\n",
+    "print(a_melange)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test `croisement`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = np.array([0,0,0,1,1,0,1,1])\n",
+    "p2 = np.array([1,0,1,1,0,0,1,0])\n",
+    "(e1,e2,point_croisement) = croisement(p1,p2)\n",
+    "print(\"Parents:\")\n",
+    "afficher_genes_individu(p1)\n",
+    "print()\n",
+    "afficher_genes_individu(p2)\n",
+    "print()\n",
+    "print(\"Enfants:\")\n",
+    "afficher_genes_individu(e1)\n",
+    "print()\n",
+    "afficher_genes_individu(e2)\n",
+    "print()\n",
+    "#print(\"point de croisement = \",point_croisement)\n",
+    "print(\" \"*(point_croisement)+\"][\")\n",
+    "print(\"(point_croisement=\",point_croisement,\")\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
