--- a/algorithme_genetique_ex2.ipynb
+++ b/algorithme_genetique_ex2.ipynb
@@ -203,6 +203,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test `index_des_meilleurs`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores2 = np.array([[0.5],#0\n",
+    "                    [1.2],#1\n",
+    "                    [0.1],#2\n",
+    "                    [5.2],#3\n",
+    "                    [0.7],#4\n",
+    "                    [0.9],#5\n",
+    "                    [4.0],#6\n",
+    "                    [3.1]])#7\n",
+    "meilleurs = index_des_meilleurs(scores2,4)\n",
+    "pires = index_des_pires(scores2,5)\n",
+    "print(\"meilleurs=\",meilleurs)\n",
+    "print(\"pires=\",pires)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
