--- a/algorithme_genetique_ex2.ipynb
+++ b/algorithme_genetique_ex2.ipynb
@@ -8,8 +8,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
     "from fonctions import *"
    ]
   },
@@ -22,9 +20,7 @@
     "taille_population = 20 #doit être multiple de 4 (/2 -> enfants, /2 -> paires d'enfants)\n",
     "proba_croisement = 0.8\n",
     "proba_mutation = 0.08\n",
-    "nb_individus_remplaces = 5\n",
-    "afficher_etapes = False\n",
-    "afficher_evolution_du_score = False"
+    "nb_individus_remplaces = 10"
    ]
   },
   {
@@ -34,8 +30,8 @@
    "outputs": [],
    "source": [
     "num_generation = 0\n",
-    "max_generations = 100\n",
-    "meilleurs_scores = np.full((1,max_generations+1), np.NaN) #+1 case pour la génération 0\n",
+    "max_generations = 20\n",
+    "meilleurs_scores = np.full((1,max_generations+1), np.NaN) #+1 case pour la generation 0\n",
     "scores_moyens = np.full((1,max_generations+1), np.NaN)\n",
     "population = np.array([[1,1,0,1,0,0,0,1],\n",
     "                       [1,0,0,0,1,1,1,1],\n",
@@ -56,57 +52,7 @@
     "                       [0,1,1,0,1,1,1,0],\n",
     "                       [1,0,0,0,0,1,1,1],\n",
     "                       [1,1,1,1,0,0,1,0],\n",
-    "                       [1,0,0,0,0,0,0,0]], dtype=int)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.geeksforgeeks.org/decimal-equivalent-gray-code-inverse/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def dec2gc(dec,N):\n",
-    "#     dec ^= (dec >> 1)\n",
-    "#     return '{:0>{width}}'.format(bin(dec)[2:], 'b', width=N)\n",
-    "# def gc2dec(gc):\n",
-    "#     gc = int(gc,base=2)\n",
-    "#     inv = 0\n",
-    "#     while(gc):\n",
-    "#         inv = inv ^ gc\n",
-    "#         gc = gc >> 1\n",
-    "#     return inv\n",
-    "\n",
-    "chromosome = dec2gc(247,16)\n",
-    "print(chromosome)\n",
-    "print(gc2dec(chromosome))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fn_y = lambda x: np.sin(2*np.pi*0.01*x)*(-x)*0.02 - 4\n",
-    "x=np.arange(0,2**8)\n",
-    "fig = px.line(x=x,y=fn_y(x))\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tracer_population(population,\"Population initiale\")"
+    "                       [1,0,0,0,0,0,0,0]],dtype=np.uint8)"
    ]
   },
   {
@@ -116,15 +62,8 @@
    "outputs": [],
    "source": [
     "scores = calcul_scores_population(population)\n",
-    "afficher_population_et_scores(population,scores)\n",
-    "afficher_stats_scores(scores,0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test selection"
+    "print(type(population))\n",
+    "afficher_population_et_scores(population,scores)"
    ]
   },
   {
@@ -133,15 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([[0,0],\n",
-    "              [0,1],\n",
-    "              [1,0],\n",
-    "              [1,1]])\n",
-    "scores = np.array([[0.5],\n",
-    "                   [1.2],\n",
-    "                   [0.1],\n",
-    "                   [5.2]])\n",
-    "afficher_population_et_scores(a,scores)"
+    "afficher_stats_scores(scores,num_generation)\n",
+    "#affichage des individus\n",
+    "tracer_population(population,\"Population a la generation {}\".format(num_generation))"
    ]
   },
   {
@@ -150,91 +83,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "individus_selectiones = selection(a,scores)\n",
-    "print(individus_selectiones)"
+    "afficher_etapes = False\n",
+    "afficher_evolution_du_score = True\n",
+    "boucle_optimisation(population,proba_croisement,proba_mutation,max_generations,\n",
+    "                    nb_individus_remplaces,afficher_etapes,afficher_evolution_du_score,\n",
+    "                    scores_moyens,meilleurs_scores)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test melange_parents"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_melange = melange_parents(a)\n",
-    "print(a_melange)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test `croisement`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p1 = np.array([0,0,0,1,1,0,1,1])\n",
-    "p2 = np.array([1,0,1,1,0,0,1,0])\n",
-    "(e1,e2,point_croisement) = croisement(p1,p2)\n",
-    "print(\"Parents:\")\n",
-    "afficher_genes_individu(p1)\n",
-    "print()\n",
-    "afficher_genes_individu(p2)\n",
-    "print()\n",
-    "print(\"Enfants:\")\n",
-    "afficher_genes_individu(e1)\n",
-    "print()\n",
-    "afficher_genes_individu(e2)\n",
-    "print()\n",
-    "#print(\"point de croisement = \",point_croisement)\n",
-    "print(\" \"*(point_croisement)+\"][\")\n",
-    "print(\"(point_croisement=\",point_croisement,\")\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test `index_des_meilleurs`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores2 = np.array([[0.5],#0\n",
-    "                    [1.2],#1\n",
-    "                    [0.1],#2\n",
-    "                    [5.2],#3\n",
-    "                    [0.7],#4\n",
-    "                    [0.9],#5\n",
-    "                    [4.0],#6\n",
-    "                    [3.1]])#7\n",
-    "meilleurs = index_des_meilleurs(scores2,4)\n",
-    "pires = index_des_pires(scores2,5)\n",
-    "print(\"meilleurs=\",meilleurs)\n",
-    "print(\"pires=\",pires)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
