--- a/1D_example/tests.ipynb
+++ b/1D_example/tests.ipynb
@@ -80,7 +80,9 @@
     "                       [1,0,0,0,0,1,1,1],\n",
     "                       [1,1,1,1,0,0,1,0],\n",
     "                       [1,0,0,0,0,0,0,0]], dtype=int)\n",
-    "tracer_population(population,\"Population initiale\")"
+    "figure = tracer_population(population,\"Population initiale\")\n",
+    "figure.write_image(\"population_initiale.png\")\n",
+    "figure.show()"
    ]
   },
   {
@@ -237,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2 (tags/v3.8.2:7b3ab59, Feb 25 2020, 23:03:10) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
