1D example: move function def to notebook

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Genetic algorithms: 1D example\n",
+    "\n",
+    "Import some packages/modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -8,7 +17,60 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from fonctions import *"
+    "from random import random\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from time import sleep\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "from fonctions import * # TODO remove by moving content in the notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notebook settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EXPORT_FIGURES = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the function to minimize : $f(x) = −0.02x \\times sin(0.01 x \\times 2 \\pi) − 4$\n",
+    "\n",
+    "With $x$ an integer between $0$ and $2^8 = 255$ included."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function_to_minimize = lambda x: -0.02 * x * np.sin(0.01*x*2*np.pi) - 4\n",
+    "\n",
+    "# trace the function\n",
+    "x = np.arange(0, 2**8) # range [0, 2^8=256[ -> [0, 255]\n",
+    "y = function_to_minimize(x) # evaluate all values in x\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(x=x,y=y,mode='lines'))\n",
+    "fig.update_layout(title_text=\"Function to minimize\")\n",
+    "fig.show()\n",
+    "\n",
+    "if EXPORT_FIGURES:\n",
+    "    fig.write_image(\"function_to_minimize.png\")\n",
+    "\n",
+    "print(f\"The minimum is {np.min(y):0.2f} at x={np.argmin(y)}\")"
    ]
   },
   {
