1D example: add Grey code conversion in notebook

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -46,6 +46,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Objective function\n",
+    "\n",
     "Define the function to minimize : $f(x) = −0.02x \\times sin(0.01 x \\times 2 \\pi) − 4$\n",
     "\n",
     "With $x$ an integer between $0$ and $2^8 = 255$ included."
@@ -77,14 +79,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## test `dec2gc` and `gc2dec`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.geeksforgeeks.org/decimal-equivalent-gray-code-inverse/"
+    "# Binary representation\n",
+    "\n",
+    "In order to use a genetic algorithm, we must be able to represent solutions (= individuals) as chromosomes -> alleles vector.\n",
+    "\n",
+    "The simplest way to do so with integers is to use their binary representation.\n",
+    "\n",
+    "But there is a catch: to enforce adjacent inputs to have adjacent binary codes, we must use the [Grey code](https://en.wikipedia.org/wiki/Gray_code).\n",
+    "\n",
+    "This way, the binary representation of two successive integers will differ in only one bit.\n",
+    "\n",
+    "We need to functions, `dec2gc()` to compute the Grey code of a decimal number, and `gc2dec()` the inverse."
    ]
   },
   {
@@ -93,20 +98,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def dec2gc(dec,N):\n",
-    "#     dec ^= (dec >> 1)\n",
-    "#     return '{:0>{width}}'.format(bin(dec)[2:], 'b', width=N)\n",
-    "# def gc2dec(gc):\n",
-    "#     gc = int(gc,base=2)\n",
-    "#     inv = 0\n",
-    "#     while(gc):\n",
-    "#         inv = inv ^ gc\n",
-    "#         gc = gc >> 1\n",
-    "#     return inv\n",
+    "# https://www.geeksforgeeks.org/decimal-equivalent-gray-code-inverse/\n",
     "\n",
-    "chromosome = dec2gc(247,16)\n",
-    "print(chromosome)\n",
-    "print(gc2dec(chromosome))\n"
+    "def dec2gc(dec,N):\n",
+    "    \"\"\"\n",
+    "    Decimal to Grey code conversion\n",
+    "    \"\"\"\n",
+    "    binary = dec\n",
+    "    binary ^= (binary >> 1) # conversion happens here\n",
+    "    # convert to string with bin(), remove '0b', pad with '0's for fixed width\n",
+    "    binary = '{:0>{width}}'.format(bin(binary)[2:], 'b', width=N)\n",
+    "    # separate chars with ' ' and use this separator to get an int array\n",
+    "    return np.fromstring(\" \".join(binary),dtype=int,sep=\" \")\n",
+    "\n",
+    "def gc2dec(gc):\n",
+    "    \"\"\"\n",
+    "    Gray code to decimal conversion\n",
+    "    \"\"\"\n",
+    "    #create a string from the array\n",
+    "    gc = np.array2string(gc, separator='')[1:-1]\n",
+    "    gc = int(gc,base=2)\n",
+    "    inv = 0\n",
+    "    while(gc):\n",
+    "        inv = inv ^ gc\n",
+    "        gc = gc >> 1\n",
+    "    return inv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test the conversion functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "decimal_value = np.random.randint(0,2**8) # random 8 bits integer\n",
+    "gray_code = dec2gc(decimal_value,8)\n",
+    "print(f\"The Grey code (on 8 bits) of {decimal_value} is\\n{gray_code}\\n\")\n",
+    "back_to_decimal = gc2dec(gray_code)\n",
+    "print(f\"The decimal value of\\n{gray_code} is {back_to_decimal}\")\n",
+    "assert(back_to_decimal == decimal_value)"
    ]
   },
   {
