Gray code, not Grey code. Sorry Frank Gray

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -85,11 +85,11 @@
     "\n",
     "The simplest way to do so with integers is to use their binary representation.\n",
     "\n",
-    "But there is a catch: to enforce adjacent inputs to have adjacent binary codes, we must use the [Grey code](https://en.wikipedia.org/wiki/Gray_code).\n",
+    "But there is a catch: to enforce adjacent inputs to have adjacent binary codes, we must use the [Gray code](https://en.wikipedia.org/wiki/Gray_code).\n",
     "\n",
     "This way, the binary representation of two successive integers will differ in only one bit.\n",
     "\n",
-    "We need to functions, `dec2gc()` to compute the Grey code of a decimal number, and `gc2dec()` the inverse."
+    "We need to functions, `dec2gc()` to compute the Gray code of a decimal number, and `gc2dec()` the inverse."
    ]
   },
   {
@@ -102,7 +102,7 @@
     "\n",
     "def dec2gc(dec,N):\n",
     "    \"\"\"\n",
-    "    Decimal to Grey code conversion\n",
+    "    Decimal to Gray code conversion\n",
     "    \"\"\"\n",
     "    binary = dec\n",
     "    binary ^= (binary >> 1) # conversion happens here\n",
@@ -141,7 +141,7 @@
     "\n",
     "decimal_value = np.random.randint(0,2**8) # random 8 bits integer\n",
     "gray_code = dec2gc(decimal_value,8)\n",
-    "print(f\"The Grey code (on 8 bits) of {decimal_value} is\\n{gray_code}\\n\")\n",
+    "print(f\"The Gray code (on 8 bits) of {decimal_value} is\\n{gray_code}\\n\")\n",
     "back_to_decimal = gc2dec(gray_code)\n",
     "print(f\"The decimal value of\\n{gray_code} is {back_to_decimal}\")\n",
     "assert(back_to_decimal == decimal_value)"
