code to export a GIF of the evolving population

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -181,7 +181,7 @@
     "                       [1,1,1,1,0,0,1,0],\n",
     "                       [1,0,0,0,0,0,0,0]], dtype=int)\n",
     "figure = tracer_population(population,\"Population initiale\")\n",
-    "figure.write_image(\"population_initiale.png\")\n",
+    "# figure.write_image(\"population_initiale.png\")\n",
     "figure.show()"
    ]
   },
@@ -317,6 +317,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "proba_croisement = 0.8\n",
+    "proba_mutation = 0.08\n",
+    "max_generations = 100\n",
+    "nb_individus_remplaces = 5\n",
+    "afficher_etapes = True\n",
+    "afficher_evolution_du_score = True\n",
+    "scores_moyens = np.zeros((1,max_generations+1))\n",
+    "meilleurs_scores = np.zeros((1,max_generations+1))\n",
+    "boucle_optimisation(population,proba_croisement,proba_mutation,max_generations,nb_individus_remplaces,afficher_etapes,afficher_evolution_du_score,scores_moyens,meilleurs_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then to obain a GIF of the evolving population, with [Gifski](https://github.com/ImageOptim/gifski/) :\n",
+    "```bash\n",
+    "gifski -o anim.gif generation_*.png --fps 4\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
