random generation of first individuals + plot function

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -23,7 +23,12 @@
     "from time import sleep\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "from fonctions import * # TODO remove by moving content in the notebook"
+    "from fonctions import * # TODO remove by moving content in the notebook\n",
+    "\n",
+    "# Set the seed of the random number generator.\n",
+    "# `np.random.seed(value)` is considered a legacy function,\n",
+    "# so let's use a `np.random.Generator`\n",
+    "rng: np.random.Generator = np.random.default_rng(seed=112358)"
    ]
   },
   {
@@ -61,12 +66,22 @@
    "source": [
     "function_to_minimize = lambda x: -0.02 * x * np.sin(0.01*x*2*np.pi) - 4\n",
     "\n",
-    "# trace the function\n",
+    "# compute its value over the domain\n",
     "x = np.arange(0, 2**8) # range [0, 2^8=256[ -> [0, 255]\n",
     "y = function_to_minimize(x) # evaluate all values in x\n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(x=x,y=y,mode='lines'))\n",
-    "fig.update_layout(title_text=\"Function to minimize\")\n",
+    "\n",
+    "# define how to plot the function\n",
+    "def plot_objective_function(x: np.ndarray, y: np.ndarray) -> go.Figure:\n",
+    "    fig = go.Figure(\n",
+    "        go.Scatter(x=x,y=y,mode='lines'),\n",
+    "        layout_xaxis_range=[0,255],\n",
+    "        layout_yaxis_range=[-9,0]\n",
+    "    )\n",
+    "    fig.update_layout(title_text=\"Function to minimize\")\n",
+    "    return fig\n",
+    "\n",
+    "# plot the function\n",
+    "fig = plot_objective_function(x,y)\n",
     "fig.show()\n",
     "\n",
     "if EXPORT_FIGURES:\n",
@@ -151,7 +166,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## test `tracer_population`"
+    "# Generation of the initial population\n",
+    "\n",
+    "The population is stored as a $N ~ \\text{individuals} \\times 8 ~ \\text{genes}$ matrix. Here $N=20$.\n",
+    "\n",
+    "Option A : pre-generated random individuals"
    ]
   },
   {
@@ -179,10 +198,60 @@
     "                       [0,1,1,0,1,1,1,0],\n",
     "                       [1,0,0,0,0,1,1,1],\n",
     "                       [1,1,1,1,0,0,1,0],\n",
-    "                       [1,0,0,0,0,0,0,0]], dtype=int)\n",
-    "figure = tracer_population(population,\"Population initiale\")\n",
-    "# figure.write_image(\"population_initiale.png\")\n",
-    "figure.show()"
+    "                       [1,0,0,0,0,0,0,0]], dtype=int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Option B : populate the initial population with random individuals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "population = rng.integers(low=0, high=2, size=(20,8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define how to plot a given population\n",
+    "def plot_population(x,y,population) -> go.Figure:\n",
+    "    fig = plot_objective_function(x,y)\n",
+    "    x_population = np.apply_along_axis((lambda x: float(gc2dec(x))), axis=1, arr=population)\n",
+    "    y_population = function_to_minimize(x_population)\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=x_population,\n",
+    "        y=y_population,\n",
+    "        mode='markers',\n",
+    "        marker_color='black',\n",
+    "        marker_size=10\n",
+    "    ))\n",
+    "    fig.layout.update(showlegend=False) # remove legend\n",
+    "    return fig\n",
+    "\n",
+    "# plot the initial population\n",
+    "fig = plot_population(x,y,population)\n",
+    "fig.update_layout(title_text='Initial population')\n",
+    "fig.show()\n",
+    "\n",
+    "if EXPORT_FIGURES:\n",
+    "    fig.write_image(\"initial_population.png\")"
    ]
   },
   {
