define fitness score, evaluate init population & display scores with a Rich table

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -22,6 +22,9 @@
     "import plotly.graph_objects as go\n",
     "from time import sleep\n",
     "from IPython.display import clear_output\n",
+    "from rich.table import Table\n",
+    "from rich.console import Console\n",
+    "console = Console()\n",
     "\n",
     "from fonctions import * # TODO remove by moving content in the notebook\n",
     "\n",
@@ -55,7 +58,11 @@
     "\n",
     "Define the function to minimize : $f(x) = −0.02x \\times sin(0.01 x \\times 2 \\pi) − 4$\n",
     "\n",
-    "With $x$ an integer between $0$ and $2^8 = 255$ included."
+    "With $x$ an integer between $0$ and $2^8 = 255$ included.\n",
+    "\n",
+    "Within the framework of genetic algorithms, we seek to maximize the fitness score of individuals, regarding their environment &rarr; the score is therefore $-f(x)$.\n",
+    "\n",
+    "$f(x)$ is defined so that the score is always positive."
    ]
   },
   {
@@ -65,6 +72,8 @@
    "outputs": [],
    "source": [
     "function_to_minimize = lambda x: -0.02 * x * np.sin(0.01*x*2*np.pi) - 4\n",
+    "\n",
+    "fitness_score = lambda x: -function_to_minimize(x)\n",
     "\n",
     "# compute its value over the domain\n",
     "x = np.arange(0, 2**8) # range [0, 2^8=256[ -> [0, 255]\n",
@@ -166,6 +175,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Compact string representation of chromosomes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chromosome2str = lambda chromosome: ''.join([str(allele) for allele in chromosome]) # `chromosome` being a numpy array of int (row of `population` defined below)\n",
+    "\n",
+    "chromosome2str(gray_code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Generation of the initial population\n",
     "\n",
     "The population is stored as a $N ~ \\text{individuals} \\times 8 ~ \\text{genes}$ matrix. Here $N=20$.\n",
@@ -215,6 +242,48 @@
    "outputs": [],
    "source": [
     "population = rng.integers(low=0, high=2, size=(20,8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluate each individual of the initial population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define how to evaluate a given population\n",
+    "def evaluate_population(population: np.ndarray) -> np.ndarray:\n",
+    "    scores = np.zeros((population.shape[0],1)) # a column vector of size N, N = number of individuals\n",
+    "    for idx in range(0,population.shape[0]):\n",
+    "        scores[idx] = fitness_score(gc2dec(population[idx,:]))\n",
+    "    return scores\n",
+    "\n",
+    "# evaluate the initial population\n",
+    "scores: np.ndarray = evaluate_population(population)\n",
+    "\n",
+    "# define how to display the scores\n",
+    "def display_scores(population: np.ndarray, scores: np.ndarray, console: Console):\n",
+    "    assert(population.shape[0] == scores.shape[0])\n",
+    "    table = Table(title=\"Fitness scores\")\n",
+    "    table.add_column('Index')\n",
+    "    table.add_column('Chromosome')\n",
+    "    table.add_column('Score')\n",
+    "    for idx in range(0,population.shape[0]):\n",
+    "        table.add_row(\n",
+    "            str(idx),\n",
+    "            chromosome2str(population[idx,:]),\n",
+    "            f'{scores[idx,0]:0.2f}'\n",
+    "        )\n",
+    "    console.print(table)\n",
+    "\n",
+    "# display the scores of the initial population\n",
+    "display_scores(population,scores,console)"
    ]
   },
   {
