crossover code + display in notebook

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -25,6 +25,7 @@
     "from rich.table import Table\n",
     "from rich.console import Console\n",
     "console = Console()\n",
+    "from icecream import ic\n",
     "\n",
     "from fonctions import * # TODO remove by moving content in the notebook\n",
     "\n",
@@ -327,7 +328,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test `calcul_scores_population`, `afficher_population_et_scores` et `afficher_stats_scores`"
+    "# Crossover\n",
+    "\n",
+    "In pairs, the chromosomes of two individuals are recombined according to a crossover point"
    ]
   },
   {
@@ -336,9 +339,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = calcul_scores_population(population)\n",
-    "afficher_population_et_scores(population,scores)\n",
-    "afficher_stats_scores(scores,0)"
+    "def individuals_crossover(parent1: np.ndarray, parent2: np.ndarray, crossover_point: int):\n",
+    "    assert(parent1.shape == (8,))\n",
+    "    assert(parent2.shape == (8,))\n",
+    "    # chromosomes of 8 genes\n",
+    "    # |0|1|2|3|4|5|6|7|\n",
+    "    #   ^ ^ ^ ^ ^ ^ ^\n",
+    "    #   0 1 2 3 4 5 6\n",
+    "    # -> 7 crossover points possible\n",
+    "    assert(crossover_point >= 0)\n",
+    "    assert(crossover_point <= 6)\n",
+    "    child1 = np.copy(parent1)\n",
+    "    child2 = np.copy(parent2)\n",
+    "    temp = np.copy(child1[0:crossover_point+1]) # copy the first chunk of child1\n",
+    "    child1[0:crossover_point+1] = np.copy(child2[0:crossover_point+1]) # replace the first chunk of child1 by the first chunk of child2\n",
+    "    child2[0:crossover_point+1] = np.copy(temp) # replace the first chunk of child2 by the saved first chunk of child1\n",
+    "    return child1, child2\n",
+    "\n",
+    "# define how to visualize a crossover between two chromosomes\n",
+    "\n",
+    "def display_crossover(parent1: np.ndarray, parent2: np.ndarray, crossover_point: int, child1: np.ndarray, child2: np.ndarray):\n",
+    "    console.print(\n",
+    "        f'parent1 : [bright_red]{chromosome2str(parent1)}[/]\\n'\n",
+    "        f'parent2 : [bright_cyan]{chromosome2str(parent2)}[/]\\n'\n",
+    "        f' child1 : [bright_cyan]{chromosome2str(child1)[:crossover_point+1]}[/][bright_red]{chromosome2str(child1)[crossover_point+1:]}[/]\\n'\n",
+    "        f' child2 : [bright_red]{chromosome2str(child2)[:crossover_point+1]}[/][bright_cyan]{chromosome2str(child2)[crossover_point+1:]}[/]'\n",
+    "    )\n",
+    "\n",
+    "# With predefined parents and crossover point\n",
+    "\n",
+    "parent1 = np.array([1,1,0,1,0,0,0,1], dtype=int)\n",
+    "parent2 = np.array([0,0,0,0,1,1,0,1], dtype=int)\n",
+    "crossover_point = 3\n",
+    "child1, child2 = individuals_crossover(parent1,parent2,crossover_point)\n",
+    "display_crossover(\n",
+    "    parent1,\n",
+    "    parent2,\n",
+    "    crossover_point,\n",
+    "    child1,\n",
+    "    child2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To apply the crossover on the whole population, we have to\n",
+    "1. Shuffle the population\n",
+    "1. Group parents in pairs\n",
+    "1. For each pair, pick a random number according to a crossover probability\n",
+    "   If no crossover for the current pair, copy the parents chromosomes into the children ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crossover_probability = 0.8\n",
+    "\n",
+    "def population_crossover(parents: np.ndarray, crossover_probability: float, rng: np.random.Generator, display_crossovers: bool = False) -> np.ndarray:\n",
+    "    # shuffle the parents\n",
+    "    parents = parents[rng.permutation(parents.shape[0])]\n",
+    "    children = np.copy(parents)\n",
+    "    for i in np.arange(0,parents.shape[0],2): # two by two\n",
+    "        parent1 = parents[i,:]\n",
+    "        parent2 = parents[i+1,:]\n",
+    "        if rng.uniform(low=0.0, high=1.0) < crossover_probability:\n",
+    "            # generate a random crossover point\n",
+    "            crossover_point = rng.integers(low=0, high=6, size=1, dtype=int, endpoint=True)[0] \n",
+    "            children[i,:], children[i+1,:] = individuals_crossover(\n",
+    "                parent1,\n",
+    "                parent2,\n",
+    "                crossover_point\n",
+    "            )\n",
+    "            if display_crossovers:\n",
+    "                display_crossover(\n",
+    "                    parent1,\n",
+    "                    parent2,\n",
+    "                    crossover_point,\n",
+    "                    children[i,:],\n",
+    "                    children[i+1,:]\n",
+    "                )\n",
+    "        else:\n",
+    "            # no crossover, leave parents chromosomes in children[i,:] and children[i+1,:]\n",
+    "            if display_crossovers:\n",
+    "                # like display_crossover() but no colors\n",
+    "                print(\n",
+    "                    f'parent1 : {chromosome2str(parent1)}\\n'\n",
+    "                    f'parent2 : {chromosome2str(parent2)}\\n'\n",
+    "                    f' child1 : {chromosome2str(children[i,:])}\\n'\n",
+    "                    f' child2 : {chromosome2str(children[i+1,:])}\\n'\n",
+    "                )\n",
+    "    return children\n",
+    "\n",
+    "children = population_crossover(population,crossover_probability,rng,True)"
    ]
   },
   {
@@ -373,54 +470,6 @@
    "source": [
     "individus_selectiones = selection(a,scores)\n",
     "print(individus_selectiones)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test melange_parents"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_melange = melange_parents(a)\n",
-    "print(a_melange)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test `croisement`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p1 = np.array([0,0,0,1,1,0,1,1])\n",
-    "p2 = np.array([1,0,1,1,0,0,1,0])\n",
-    "(e1,e2,point_croisement) = croisement(p1,p2)\n",
-    "print(\"Parents:\")\n",
-    "afficher_genes_individu(p1)\n",
-    "print()\n",
-    "afficher_genes_individu(p2)\n",
-    "print()\n",
-    "print(\"Enfants:\")\n",
-    "afficher_genes_individu(e1)\n",
-    "print()\n",
-    "afficher_genes_individu(e2)\n",
-    "print()\n",
-    "#print(\"point de croisement = \",point_croisement)\n",
-    "print(\" \"*(point_croisement)+\"][\")\n",
-    "print(\"(point_croisement=\"+str(point_croisement)+\")\")"
    ]
   },
   {
@@ -476,11 +525,6 @@
     "gifski -o anim.gif generation_*.png --fps 4\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
