mutation code + display in notebook

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -23,8 +23,8 @@
     "from time import sleep\n",
     "from IPython.display import clear_output\n",
     "from rich.table import Table\n",
+    "from rich.theme import Theme\n",
     "from rich.console import Console\n",
-    "console = Console()\n",
     "from icecream import ic\n",
     "\n",
     "from fonctions import * # TODO remove by moving content in the notebook\n",
@@ -32,7 +32,11 @@
     "# Set the seed of the random number generator.\n",
     "# `np.random.seed(value)` is considered a legacy function,\n",
     "# so let's use a `np.random.Generator`\n",
-    "rng: np.random.Generator = np.random.default_rng(seed=112358)"
+    "rng: np.random.Generator = np.random.default_rng(seed=112358)\n",
+    "\n",
+    "# create a Rich Console object\n",
+    "# TODO not a global var, pass it to function\n",
+    "console = Console(theme=Theme(inherit=False)) # do not inherit, else chromosome will be formatted according to repr.number"
    ]
   },
   {
@@ -339,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def individuals_crossover(parent1: np.ndarray, parent2: np.ndarray, crossover_point: int):\n",
+    "def individuals_crossover(parent1: np.ndarray, parent2: np.ndarray, crossover_point: int) -> tuple[np.ndarray, np.ndarray]:\n",
     "    assert(parent1.shape == (8,))\n",
     "    assert(parent2.shape == (8,))\n",
     "    # chromosomes of 8 genes\n",
@@ -436,6 +440,44 @@
     "    return children\n",
     "\n",
     "children = population_crossover(population,crossover_probability,rng,True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mutation\n",
+    "\n",
+    "At random, some gene the individuals are altered to express the other allele (bit flip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mutation_probability = 0.08\n",
+    "\n",
+    "def population_mutation(population: np.ndarray, mutation_probability: float, rng: np.random.Generator, display_mutations: bool = False) -> np.ndarray:\n",
+    "    to_print = ''\n",
+    "    for idx in range(population.shape[0]):\n",
+    "        if display_mutations:\n",
+    "            to_print += chromosome2str(population[idx,:]) + ' -> '\n",
+    "        for gene in range(8):\n",
+    "            if rng.uniform(low=0.0, high=1.0) < mutation_probability:\n",
+    "                population[idx,gene] = int(not bool(population[idx,gene])) # binary complement\n",
+    "                if display_mutations:\n",
+    "                    to_print += f'[orange1]{population[idx,gene]}[/]'\n",
+    "            else:\n",
+    "                if display_mutations:\n",
+    "                    to_print += str(population[idx,gene])\n",
+    "        if display_mutations:\n",
+    "            to_print += '\\n'\n",
+    "    if display_mutations:\n",
+    "        console.print(to_print)\n",
+    "\n",
+    "population_mutation(children,mutation_probability,rng,True)"
    ]
   },
   {
