fix Rich console theme (missing def for table headers)

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "# create a Rich Console object\n",
     "# TODO not a global var, pass it to function\n",
-    "console = Console(theme=Theme(inherit=False)) # do not inherit, else chromosome will be formatted according to repr.number"
+    "console = Console(theme=Theme({\"repr.number\": \"\"})) # no special style for numbers, affecting chromosome printing"
    ]
   },
   {
