add name to traces in plots

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -87,7 +87,7 @@
     "# define how to plot the function\n",
     "def plot_objective_function(x: np.ndarray, y: np.ndarray) -> go.Figure:\n",
     "    fig = go.Figure(\n",
-    "        go.Scatter(x=x,y=y,mode='lines'),\n",
+    "        go.Scatter(x=x,y=y,mode='lines',name='objective function'),\n",
     "        layout_xaxis_range=[0,255],\n",
     "        layout_yaxis_range=[-9,0]\n",
     "    )\n",
@@ -314,7 +314,8 @@
     "        y=y_population,\n",
     "        mode='markers',\n",
     "        marker_color='black',\n",
-    "        marker_size=10\n",
+    "        marker_size=10,\n",
+    "        name='individuals'\n",
     "    ))\n",
     "    fig.layout.update(showlegend=False) # remove legend\n",
     "    return fig\n",
